--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@
 
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
-.design
+design
+node_modules
 *.md
 !README.md
+index.html
